--- a/top_page_index.html
+++ b/top_page_index.html
@@ -13,9 +13,9 @@
         <div class="container">
           <h1 class="logo">Vini</h1>
           <ul class="nav">
-            <li class="header-hover-color"><a href="./suspicious_page/suspicious_page_index.html">husinsya</a></li>
-            <li class="header-hover-color"><a href="./known_page/known_page_index.html">tizn</a></li>
-            <li class="header-hover-color"><a href="./calender_page/calender_page_index.html">calender</a></li>
+            <li class="header-hover-color"><a href="./suspicious_page/suspicious_page_index.html">危険人物</a></li>
+            <li class="header-hover-color"><a href="./known_page/known_page_index.html">知人</a></li>
+            <li class="header-hover-color"><a href="./calender_page/calender_page_index.html">カレンダー</a></li>
             <li class="header-hover-color"><a href="#">nnn</a></li>
           </ul>
         </div>
