--- a/top_page_index.html
+++ b/top_page_index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="container">
-          <h1 class="logo">Vini</h1>
+            <img src="logo3.png" alt="Logo" class="logo">
           <ul class="nav">
             <li class="header-hover-color"><a href="./suspicious_page/suspicious_page_index.html">危険人物</a></li>
             <li class="header-hover-color"><a href="./known_page/known_page_index.html">知人</a></li>
@@ -24,7 +24,7 @@
     <main>
         <div class="page-wrap">
             <div class="app-container">
-                <h1 class="introduce-app">Welcome to My App</h1>
+                <img src="logo2.png" alt="App Logo" class="app-logo">
             </div>
             <div class="button-wrap">
                 <a href="interphone_page/interphone_page_index.html" class="button">START</a>
@@ -32,5 +32,6 @@
         </div>
         <script src="app.js"></script>
     </main>
+    
 </body>
 </html>
