--- a/suspicious_page/suspicious_page_index.html
+++ b/suspicious_page/suspicious_page_index.html
@@ -9,12 +9,14 @@
 <body>
     <header class="header">
         <div class="container">
-          <h1 class="logo">Vini</h1>
+            <a href="../top_page_index.html"> <!-- トップページへのリンク -->
+                <img src="../logo3.png" alt="Logo" class="logo"> <!-- 一つ上の階層から画像を読み込む -->
+            </a>
           <ul class="nav">
-            <li class="header-hover-color"><a href="../suspicious_page/suspicious_page_index.html">husinsya</a></li>
-            <li class="header-hover-color"><a href="../known_page/known_page_index.html">tizn</a></li>
-            <li class="header-hover-color"><a href="../calender_page/calender_page_index.html">calender</a></li>
-            <li class="header-hover-color"><a href="#">nnn</a></li>
+            <li class="header-hover-color"><a href="../suspicious_page/suspicious_page_index.html">危険人物</a></li>
+            <li class="header-hover-color"><a href="../known_page/known_page_index.html">知人</a></li>
+            <li class="header-hover-color"><a href="../calender_page/calender_page_index.html">カレンダー</a></li>
+            <li class="header-hover-color"><a href="../interphone_page/interphone_page_index.html">インターホン</a></li>
           </ul>
         </div>
     </header>
