--- a/static/html/calender_page_index.html
+++ b/static/html/calender_page_index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="../top_page_index.html"> <!-- トップページへのリンク -->
+            <a href="top_page_index.html"> <!-- トップページへのリンク -->
                 <img src="../../logo3.png" alt="Logo" class="logo"> <!-- 一つ上の階層から画像を読み込む -->
             </a>
           <ul class="nav">
