--- a/static/html/top_page_index.html
+++ b/static/html/top_page_index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="./top_page_index.html">
+            <a href="top_page_index.html">
                 <img src="../../logo3.png" alt="Logo" class="logo">
             </a>
           <ul class="nav">
