--- a/static/html/interphone_page_index.html
+++ b/static/html/interphone_page_index.html
@@ -44,7 +44,7 @@
 <body class="interphone_style">
     <header class="header">
         <div class="container">
-            <a href="../html/top_page_index.html"> <!-- トップページへのリンク -->
+            <a href="top_page_index.html"> <!-- トップページへのリンク -->
                 <img src="../../logo3.png" alt="Logo" class="logo"> <!-- 一つ上の階層から画像を読み込む -->
             </a>
           <ul class="nav">
