--- a/static/html/interphone_page_index.html
+++ b/static/html/interphone_page_index.html
@@ -51,7 +51,7 @@
             <li class="header-hover-color"><a href="suspicious_page_index.html">危険人物</a></li>
             <li class="header-hover-color"><a href="known_page_index.html">知人</a></li>
             <li class="header-hover-color"><a href="calender_page_index.html">カレンダー</a></li>
-            <li class="header-hover-color"><a href="interphone_page_index.html">インターホン</a></li>
+            <li class="header-hover-color active"><a href="interphone_page_index.html">インターホン</a></li>
           </ul>
         </div>
     </header>
