--- a/static/html/suspicious_page_index.html
+++ b/static/html/suspicious_page_index.html
@@ -13,7 +13,7 @@
                 <img src="../../logo3.png" alt="Logo" class="logo"> <!-- 一つ上の階層から画像を読み込む -->
             </a>
           <ul class="nav">
-            <li class="header-hover-color"><a href="suspicious_page_index.html">危険人物</a></li>
+            <li class="header-hover-color active"><a href="suspicious_page_index.html">危険人物</a></li>
             <li class="header-hover-color"><a href="known_page_index.html">知人</a></li>
             <li class="header-hover-color"><a href="calender_page_index.html">カレンダー</a></li>
             <li class="header-hover-color"><a href="interphone_page_index.html">インターホン</a></li>
